Clarify KDE4 and TDE config variables
The configure flag is already --enable-kde4, so rename most build
and configure variables, including the config headers, and the
build module to include the major number.

Also rename the TDE MOC stored as $MOC to $TDE_MOC to prevent
conflicts.

Change-Id: Ib947ae4b80349cc52eac7812cb93e8a42606b526

--- a/config_host.mk.in
+++ b/config_host.mk.in
@@ -170,7 +170,6 @@ export ENABLE_SCRIPTING_BEANSHELL=@ENABLE_SCRIPTING_BEANSHELL@
 export ENABLE_SCRIPTING_JAVASCRIPT=@ENABLE_SCRIPTING_JAVASCRIPT@
 export ENABLE_SDREMOTE=@ENABLE_SDREMOTE@
 export ENABLE_SDREMOTE_BLUETOOTH=@ENABLE_SDREMOTE_BLUETOOTH@
-export SYSTEM_BLUEZ=@SYSTEM_BLUEZ@
 export ENABLE_SILENT_MSI=@ENABLE_SILENT_MSI@
 export ENABLE_SYMBOLS=@ENABLE_SYMBOLS@
 export ENABLE_SYSTRAY_GTK=@ENABLE_SYSTRAY_GTK@
@@ -300,9 +299,9 @@ export JITC_PROCESSOR_TYPE=@JITC_PROCESSOR_TYPE@
 export JVM_ONE_PATH_CHECK=@JVM_ONE_PATH_CHECK@
 export KDE4_CFLAGS=$(gb_SPACE)@KDE4_CFLAGS@
 export KDE4_LIBS=$(gb_SPACE)@KDE4_LIBS@
-export KDE_GLIB_CFLAGS=$(gb_SPACE)@KDE_GLIB_CFLAGS@
-export KDE_GLIB_LIBS=$(gb_SPACE)@KDE_GLIB_LIBS@
-export KDE_HAVE_GLIB=@KDE_HAVE_GLIB@
+export KDE4_GLIB_CFLAGS=$(gb_SPACE)@KDE4_GLIB_CFLAGS@
+export KDE4_GLIB_LIBS=$(gb_SPACE)@KDE4_GLIB_LIBS@
+export KDE4_HAVE_GLIB=@KDE4_HAVE_GLIB@
 export KRB5_LIBS=@KRB5_LIBS@
 export LCMS2_CFLAGS=$(gb_SPACE)@LCMS2_CFLAGS@
 export LCMS2_LIBS=$(gb_SPACE)@LCMS2_LIBS@
@@ -395,7 +394,6 @@ export MINGW_SHARED_LIBSTDCPP=@MINGW_SHARED_LIBSTDCPP@
 export MINGW_SYSROOT=@MINGW_SYSROOT@
 export ML_EXE=@ML_EXE@
 export MOC4=@MOC4@
-export MOC=@MOC@
 export MPL_SUBSET=@MPL_SUBSET@
 export MSM_PATH=@MSM_PATH@
 export MSPUB_CFLAGS=$(gb_SPACE)@MSPUB_CFLAGS@
@@ -499,6 +497,7 @@ export SYSBASE=@SYSBASE@
 export SYSTEM_ABW=@SYSTEM_ABW@
 export SYSTEM_APACHE_COMMONS=@SYSTEM_APACHE_COMMONS@
 export SYSTEM_APR=@SYSTEM_APR@
+export SYSTEM_BLUEZ=@SYSTEM_BLUEZ@
 export SYSTEM_BOOST=@SYSTEM_BOOST@
 export SYSTEM_BSH=@SYSTEM_BSH@
 export SYSTEM_BZIP2=@SYSTEM_BZIP2@
@@ -576,6 +575,7 @@ export SYSTEM_ZMF=@SYSTEM_ZMF@
 export TARFILE_LOCATION=@TARFILE_LOCATION@
 export TDE_CFLAGS=$(gb_SPACE)@TDE_CFLAGS@
 export TDE_LIBS=$(gb_SPACE)@TDE_LIBS@
+export TDE_MOC=$(gb_SPACE)@TDE_MOC@
 export TELEPATHY_CFLAGS=$(gb_SPACE)@TELEPATHY_CFLAGS@
 export TELEPATHY_LIBS=$(gb_SPACE)@TELEPATHY_LIBS@
 export TESTINSTALLDIR=@TESTINSTALLDIR@
