--- a/config_host/config_kde4.h.in
+++ b/config_host/config_kde4.h.in
@@ -5,6 +5,6 @@ Settings for KDE4 integration.
 #ifndef CONFIG_KDE4_H
 #define CONFIG_KDE4_H
 
-#define KDE_HAVE_GLIB 0
+#define KDE4_HAVE_GLIB 0
 
 #endif
