Look for iOS SDK 9.2, too
Change-Id: I2e16ae2ecb5f3a2a37c795e5ee26f72fc92b25bc

--- a/configure.ac
+++ b/configure.ac
@@ -3062,8 +3062,8 @@ if test $_os = iOS; then
 
     xcode_developer=`xcode-select -print-path`
 
-    current_sdk_ver=8.3
-    for sdkver in 9.1 9.0 8.4 8.3 8.2 8.1 8.0; do
+    current_sdk_ver=9.2
+    for sdkver in 9.2 9.1 9.0 8.4 8.3 8.2 8.1 8.0; do
         t=$xcode_developer/Platforms/$platform.platform/Developer/SDKs/$platform$sdkver.sdk
         if test -d $t; then
             ios_sdk=$sdkver
