configure.ac: it is ZLIB_LIBS that's needed here
Change-Id: I1bdd2fcb0fc20f47ba4cbad52fccb6f4ada968ea
Reviewed-on: https://gerrit.libreoffice.org/20752
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -7526,7 +7526,7 @@ if test "$with_system_zlib" = "yes"; then
         # Emscripten provides its own zlib, don't check for that
         AC_CHECK_HEADER(zlib.h, [],
             [AC_MSG_ERROR(zlib.h not found. install zlib)], [])
-        AC_CHECK_LIB(z, deflate, [ ZLIB=-lz ],
+        AC_CHECK_LIB(z, deflate, [ ZLIB_LIBS=-lz ],
             [AC_MSG_ERROR(zlib not found or functional)], [])
     fi
 else
