disable options by default on android
Some options aren't supported on android, so disable them by default to
avoid errors.

Change-Id: Ifef2f5ff55d3bd7d7da1f53d1345be3c5ef11f45
Reviewed-on: https://gerrit.libreoffice.org/21590
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: jan iversen <jani@documentfoundation.org>

--- a/configure.ac
+++ b/configure.ac
@@ -811,6 +811,9 @@ linux-android*)
     enable_coinmp=yes
     enable_lpsolve=no
     enable_report_builder=no
+    enable_odk=no
+    enable_postgresql_sdbc=no
+    enable_python=no
     with_theme="tango"
     test_cups=no
     test_dbus=no
