improve distclean for cross-compile
Change-Id: I2af71d5039d330518ea115e6a95af1f15c376538
Reviewed-on: https://gerrit.libreoffice.org/21722
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Matúš Kukan <matus@libreoffice.org>
Reviewed-by: jan iversen <jani@documentfoundation.org>

--- a/Makefile.in
+++ b/Makefile.in
@@ -175,6 +175,8 @@ distclean : clean compilerplugins-clean
         $(BUILDDIR)/config.Build.log \
         $(BUILDDIR)/config.status \
         $(BUILDDIR)/config_build.mk \
+        $(BUILDDIR)/config_build_lang.mk \
+        $(BUILDDIR)/config_build/*.h \
         $(BUILDDIR)/config_host.mk \
         $(BUILDDIR)/config_host.mk.stamp \
         $(BUILDDIR)/config_host_lang.mk \
