fix the --disable-randr-link build
This was borked since gbuildification of vcl in 2011 and the dlopen
code didn't even compile since commit
bac4ad15960647cb899a12a4686da39a141e1e9d

Change-Id: Ieff22ed144d9d89e53dd956ce0dfea5e4d07ea13

--- a/configure.ac
+++ b/configure.ac
@@ -9226,6 +9226,7 @@ AC_MSG_CHECKING([whether to enable RandR support])
 if test "$USING_X11" = TRUE -a "$test_randr" = "yes" -a \( "$enable_randr" = "yes" -o "$enable_randr" = "TRUE" \); then
     if test -z "$enable_randr_link" -o "$enable_randr_link" = "no"; then
         XRANDR_DLOPEN="TRUE"
+        ENABLE_RANDR="TRUE"
         AC_MSG_RESULT([configured to dlopen libXrandr at runtime])
     else
         AC_MSG_RESULT([yes])
