add I$JAVA_HOME/include/linux to JAVAINC to kFreeBSD to fix build
jni_md.h not in $JAVA_HOME/include anymore in OpenJDK8 (it was in 7)

Change-Id: Id5c737182a8e476b609887753047fa7ed6b01193

--- a/configure.ac
+++ b/configure.ac
@@ -7179,6 +7179,7 @@ if test -n "$ENABLE_JAVA" -a -z "$JAVAINC"; then
 
     k*bsd*-gnu*)
         JAVAINC="-I$JAVA_HOME/include"
+        JAVAINC="$JAVAINC -I$JAVA_HOME/include/linux"
         test -d "$JAVA_HOME/include/native_thread" && JAVAINC="$JAVAINC -I$JAVA_HOME/include/native_thread"
         ;;
 
