Make --enable-firebird-sdbc the default again
85fc0470cdef86ae740e8030d04cc89a943068da "firebird compat issue with macosx
10.11 was fixed by sberg some time ago" forgot to turn this back on when
reverting cc2e0cb7c2d6585bc1e736412e69075da35e248c "For now, firebird doe snot
[sic] build on macosx 10.11."

(But no, firebird still does not build out of the box on Mac OS X 10.11, one
still needs to pass into the build a non-broken SHELL that does not filter away
DYLD_* env vars.)

Change-Id: I17321893a08d1f2a129ee14bf4f4453ff64ad2ad

--- a/configure.ac
+++ b/configure.ac
@@ -1450,7 +1450,7 @@ AC_ARG_ENABLE(lotuswordpro,
 AC_ARG_ENABLE(firebird-sdbc,
     AS_HELP_STRING([--disable-firebird-sdbc],
         [Disable the build of the Firebird-SDBC driver if it doesn't compile for you.]),
-)
+,enable_firebird_sdbc=yes)
 
 AC_ARG_ENABLE(winegcc,
     AS_HELP_STRING([--enable-winegcc],
