Consider MSVC 14.0 per default, when no MSVC 12.0 installed
Change-Id: I7de8df7d8b7da2c16e27f22529162574bc0f747d
Reviewed-on: https://gerrit.libreoffice.org/22436
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: David Ostrovsky <david@ostrovsky.org>
Tested-by: David Ostrovsky <david@ostrovsky.org>

--- a/configure.ac
+++ b/configure.ac
@@ -3350,8 +3350,8 @@ vs_versions_to_check()
         map_vs_year_to_version "$1"
         vsversions=$vsversion
     else
-        # By default we prefer 2013
-        vsversions=12.0
+        # By default we prefer 2013/2015, in this order
+        vsversions="12.0 14.0"
     fi
 }
 
