Add missing trailing semicolon to Keywords again
$ desktop-file-validate draw.desktop
draw.desktop: error: value does not have a semicolon (';') as trailing character

Regression from 6cb5dbfee9d77bb6e9b6a3a0867c0f96367bae60.

Change-Id: Idf74200ca4cf17f8918ee388f347a805ac3161f3

--- a/sysui/desktop/menus/draw.desktop
+++ b/sysui/desktop/menus/draw.desktop
@@ -28,7 +28,7 @@ GenericName=Drawing Program
 Comment=Create and edit drawings, flow charts and logos by using Draw.
 StartupNotify=true
 X-GIO-NoFuse=true
-Keywords=Vector;Schema;Diagram;Layout;OpenDocument Graphics;Microsoft Publisher;Microsoft Visio;Corel Draw;cdr;odg;svg;pdf;vsd
+Keywords=Vector;Schema;Diagram;Layout;OpenDocument Graphics;Microsoft Publisher;Microsoft Visio;Corel Draw;cdr;odg;svg;pdf;vsd;
 InitialPreference=5
 StartupWMClass=libreoffice-draw
 X-KDE-Protocols=file,http,ftp,webdav
