move dbus config into its own config header
Change-Id: I5b0734a30dee323d41270de06f6a02fd676155c9
Reviewed-on: https://gerrit.libreoffice.org/22502
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>

--- a/config_host/config_dbus.h.in
+++ b/config_host/config_dbus.h.in
@@ -7,10 +7,10 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
 
-#ifndef INCLUDED_CONFIG_GIO_H
-#define INCLUDED_CONFIG_GIO_H
+#ifndef INCLUDED_CONFIG_DBUS_H
+#define INCLUDED_CONFIG_DBUS_H
 
-#define ENABLE_GIO 0
+#define ENABLE_DBUS 0
 
 #endif
 
