wget: don't break on CentOS6 baseline
Where this fancy new no-use-server-timestamps is not yet known.

Change-Id: I481c44bb977620400a3dede6191889bbbe5ec74a
Reviewed-on: https://gerrit.libreoffice.org/22546
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>

--- a/configure.ac
+++ b/configure.ac
@@ -12010,9 +12010,9 @@ if test "$enable_fetch_external" != "no"; then
 CURL=`which curl 2>/dev/null`
 
 for i in wget /usr/bin/wget /usr/local/bin/wget /usr/sfw/bin/wget /opt/sfw/bin/wget /opt/local/bin/wget; do
-    eval "$i --version" > /dev/null 2>&1
-    ret=$?
-    if test $ret -eq 0; then
+    # wget new enough?
+    $i --help 2> /dev/null | $GREP no-use-server-timestamps 2>&1 > /dev/null
+    if test $? -eq 0; then
         WGET=$i
         break
     fi
