--- a/configure.ac
+++ b/configure.ac
@@ -7910,6 +7910,11 @@ dnl ===================================================================
 libo_CHECK_SYSTEM_MODULE([libzmf],[ZMF],[libzmf-0.0])
 
 dnl ===================================================================
+dnl Check for system libstaroffice
+dnl ===================================================================
+libo_CHECK_SYSTEM_MODULE([libstaroffice],[STAROFFICE],[libstaroffice-0.0])
+
+dnl ===================================================================
 dnl Check for system libvisio
 dnl ===================================================================
 libo_CHECK_SYSTEM_MODULE([libvisio],[VISIO],[libvisio-0.1])
