--- a/config_host.mk.in
+++ b/config_host.mk.in
@@ -501,6 +501,8 @@ export SORT=@SORT@
 export SPLIT_APP_MODULES=@SPLIT_APP_MODULES@
 export SPLIT_OPT_FEATURES=@SPLIT_OPT_FEATURES@
 export SRCDIR=@SRC_ROOT@
+export STAROFFICE_CFLAGS=$(gb_SPACE)@STAROFFICE_CFLAGS@
+export STAROFFICE_LIBS=$(gb_SPACE)@STAROFFICE_LIBS@
 export STRIP=@STRIP@
 export STRIP_COMPONENTS=@STRIP_COMPONENTS@
 export SUNTEMPLATES_DE_PACK=@SUNTEMPLATES_DE_PACK@
@@ -579,6 +581,7 @@ export SYSTEM_REDLAND=@SYSTEM_REDLAND@
 export SYSTEM_REVENGE=@SYSTEM_REVENGE@
 export SYSTEM_RHINO=@SYSTEM_RHINO@
 export SYSTEM_SERF=@SYSTEM_SERF@
+export SYSTEM_STAROFFICE=@SYSTEM_STAROFFICE@
 export SYSTEM_UCPP=@SYSTEM_UCPP@
 export SYSTEM_VISIO=@SYSTEM_VISIO@
 export SYSTEM_WPD=@SYSTEM_WPD@
