enable export-validation in tests by default
since ODF and OOXML validators are now being downloaded, so new default
behavior is to use validation for export tests. To disable validation in
tests -without-export-validation configure switch should be used.

Change-Id: I5cfebae0375e6676ef8cba4cfdaac4b164eed97d
Reviewed-on: https://gerrit.libreoffice.org/28014
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>

--- a/configure.ac
+++ b/configure.ac
@@ -2039,7 +2039,7 @@ AC_ARG_WITH(export-validation,
         [If you want the exported files to be validated. Right now limited to OOXML and ODF files.
          Note: You need executable scripts officeotron and odfvalidator that take the path to the file.
          See https://cgit.freedesktop.org/libreoffice/contrib/dev-tools/tree/export-validation]),
-,)
+,with_export_validation=yes)
 
 AC_ARG_WITH(bffvalidator,
     AS_HELP_STRING([--with-bffvalidator=<absolute path to BFFValidator>],
