Default libtool to /usr/bin/libtool
We never want LIBTOOL to mean a GNU libtool (which is a totally
different program) which might be present in $PATH before
/usr/bin/libtool, specifically /usr/local/bin, which by default (and
stupidly IMHO) is before /usr/bin on stock OS X.

Change-Id: I633a9fd275503f77fc1a0dd3d24a6776579792ba

--- a/configure.ac
+++ b/configure.ac
@@ -2929,7 +2929,7 @@ if test $_os = Darwin; then
         ;;
     esac
 
-    LIBTOOL=libtool
+    LIBTOOL=/usr/bin/libtool
     INSTALL_NAME_TOOL=install_name_tool
     if test -z "$save_CC"; then
         AC_MSG_CHECKING([what compiler to use])
