--- a/extras/source/glade/libreoffice-catalog.xml.in
+++ b/extras/source/glade/libreoffice-catalog.xml.in
@@ -831,5 +831,8 @@
     <glade-widget-class title="Box which can move own content to the popup" name="sfxlo-DropdownBox"
                         generic-name="DropdownBox" parent="GtkBox"
                         icon-name="widget-gtk-box"/>
+    <glade-widget-class title="Big ToolBox" name="sfxlo-BigToolBox"
+                        generic-name="Big ToolBox" parent="GtkToolbar"
+                        icon-name="widget-gtk-toolbar"/>
   </glade-widget-classes>
 </glade-catalog>
